# robotics0

./: 10_inverse_kinematics_so100_control.ipynb  11_trs_so100_ik_mujoco.ipynb  12_so100_gym_dm_control_ik.ipynb  1_act_inference_with_pretrained.ipynb  2_act_inference_with_pretrained_so100.ipynb.ipynb  3_pi_0_inference _on_gym_so100.ipynb  3_pi_0_inference_on_gym_so100.ipynb  4_pi0_jax.ipynb  5_pi0_aloha_sim.ipynb  6_pi0_aloha_sim_image.ipynb  7_pi0_gym_aloha_sim.ipynb  8_image_resizing_issue.ipynb  9_png_vs_packing.ipynb  data.pack  main.py  policy_server.py  policy_server_0.py  policy_server_new.py  preview_gym_aloha.html  pyproject.toml
SO_5DOF_ARM100_05d.SLDASM/urdf/: SO_5DOF_ARM100_05d.SLDASM.urdf
