[project]
name = "robotics0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-control>=1.0.14",
    "flask>=3.1.0",
    "gym-aloha>=0.1.1",
    "gymnasium[classic-control]>=1.0.0",
    "ikpy>=3.4.2",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "mediapy>=1.2.2",
    "msgpack>=1.1.0",
    "mujoco==2.3.7",
    "notebook>=7.3.2",
]
